; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_hostap.c_hostap_sta_remove.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_hostap.c_hostap_sta_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostap_driver_data = type { i32 }
%struct.prism2_hostapd_param = type { i32, i32 }

@WPA_STA_AUTHORIZED = common dso_local global i32 0, align 4
@PRISM2_HOSTAPD_REMOVE_STA = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Could not remove station from kernel driver.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @hostap_sta_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hostap_sta_remove(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.hostap_driver_data*, align 8
  %7 = alloca %struct.prism2_hostapd_param, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.hostap_driver_data*
  store %struct.hostap_driver_data* %9, %struct.hostap_driver_data** %6, align 8
  %10 = load %struct.hostap_driver_data*, %struct.hostap_driver_data** %6, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @WPA_STA_AUTHORIZED, align 4
  %13 = xor i32 %12, -1
  %14 = call i32 @hostap_sta_set_flags(%struct.hostap_driver_data* %10, i32* %11, i32 0, i32 0, i32 %13)
  %15 = call i32 @memset(%struct.prism2_hostapd_param* %7, i32 0, i32 8)
  %16 = load i32, i32* @PRISM2_HOSTAPD_REMOVE_STA, align 4
  %17 = getelementptr inbounds %struct.prism2_hostapd_param, %struct.prism2_hostapd_param* %7, i32 0, i32 1
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds %struct.prism2_hostapd_param, %struct.prism2_hostapd_param* %7, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* @ETH_ALEN, align 4
  %22 = call i32 @memcpy(i32 %19, i32* %20, i32 %21)
  %23 = load %struct.hostap_driver_data*, %struct.hostap_driver_data** %6, align 8
  %24 = call i64 @hostapd_ioctl(%struct.hostap_driver_data* %23, %struct.prism2_hostapd_param* %7, i32 8)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %2
  %27 = call i32 @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %29

28:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %26
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @hostap_sta_set_flags(%struct.hostap_driver_data*, i32*, i32, i32, i32) #1

declare dso_local i32 @memset(%struct.prism2_hostapd_param*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i64 @hostapd_ioctl(%struct.hostap_driver_data*, %struct.prism2_hostapd_param*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
